--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "swr": "^2.2.5",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.3",
